# src/app/authentication/constants/routes.go
@@ -3,5 +3,5 @@ package constants
 const (
 	CustomerSignupEndpoint = "/customer-signup"
 	CustomerSigninEndpoint = "/customer-signin"
-	CustomerOtpSigninEndpoint = "/customer-otpsignin"
+	CustomerOtpSigninEndpoint = "/customer-otpvalidate"
 )
